[package]
name = "gravity-wasm"
version = "0.1.1"
authors = ["Roy Adams"]
description = "A gravity simulation tool"
license = "MIT/Apache-2.0"
repository = "https://github.com/rgadams/gravity-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.3"
ndarray = "0.15.2"

[dependencies.web-sys]
version = "0.3.51"
features = [ "console" ]
